--- a/src/components/MenuFilters/menuFilters.css
+++ b/src/components/MenuFilters/menuFilters.css
@@ -4,3 +4,10 @@
     justify-content: space-between;
     align-items: baseline;
 }
+
+@media (max-width: 765px) {
+    .menu-filters {
+        flex-direction: column;
+        gap: 15px;
+    }
+}
