--- a/src/components/PizzaCard/pizzaCard.css
+++ b/src/components/PizzaCard/pizzaCard.css
@@ -2,12 +2,14 @@
     width: 280px;
     margin-top: 35px;
 }
-.title {
+.card-title {
     font-weight: 700;
     font-size: 32px;
     line-height: 39px;
     letter-spacing: 0.01em;
     color: #000000;
+    margin: 11px 0 22px;
+    text-align: center;
 }
 
 .card-img {
@@ -28,7 +30,7 @@
 .recipe div {
     width: 50%;
     margin: 7px 5px;
-    background: #FFFFFF;
+    background: #F3F3F3;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.04);
     border-radius: 5px;
     font-weight: 700;
@@ -40,14 +42,18 @@
     padding: 10px;
 }
 
+.recipe .active-recipe {
+    background: #FFFFFF;
+}
+
 .size {
     display: flex;
 }
 
-.size P {
+.size p {
     width: 33.3%;
     margin: 7px 5px;
-    background: #FFFFFF;
+    background: #F3F3F3;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.04);
     border-radius: 5px;
     font-weight: 700;
@@ -59,32 +65,84 @@
     padding: 5px;
 }
 
+.card-details {
+    margin-top: 17px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.size .active-size {
+    background: #FFFFFF;
+}
+
 .pizza-price {
     font-weight: 700;
-    font-size: 22px;
+    font-size: 20px;
     line-height: 27px;
     letter-spacing: 0.015em;
     color: #000000;
 }
 
-.add {
+.plus {
+    display: inline-block;
+    margin:  0 11px;
+    height: 12px;
+    width: 2px;
     background: #FFFFFF;
-    border: 1px solid #EB5A1E;
+    position: relative;
+    transition: 0.4s ease-in-out;
+}
+
+.plus:before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    display: inline-block;
+    background: #FFFFFF;
+    height:12px;
+    width: 2px;  
+    transform:  translate(-50%, -50%) rotate(90deg);
+}
+
+.active-plus, .active-plus:before {
+    background: #EB5A1E;
+}
+
+.add {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: #EB5A1E;
+    color: #FFFFFF;
     border-radius: 30px;
-    padding: 10px;
+    padding: 10px 12px;
     font-weight: 700;
     font-size: 16px;
     line-height: 19px;
-    color: #EB5A1E;
+    border-color: transparent;
+    cursor: pointer;
+    transition: 0.4s ease-in-out;
 }
 
 .add .qty {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 22px;
     height: 22px;
     font-size: 13px;
     line-height: 16px;
+    margin-left: 8px;
     background-color: #EB5A1E;;
     color: #FFFFFF;
-    padding: 3px 7px;
-    border-radius: 50%;
+    border-radius: 100%;
+    transition: 0.3s ease-in-out;
+}
+
+.active-add {
+    background: #FFFFFF;
+    border: 1px solid #EB5A1E;
+    color: #EB5A1E;
 }
